@@ -27,6 +27,8 @@ FBINTF Change Log  version             (1.1-0) tba, 00 Mar 2017 14:43:56 +0000
 7. Add missing isc_info_db_read_only to list of decoded Database Information items
    in FBOutputBlock.pas and update test suite to include this item.
 
+8. FB30Client: avoid always using "StartMultiple" when only a single database attachment.
+
 
 FBINTF Change Log  version             (1.0-2) Sat, 04 Mar 2017 14:43:56 +0000
 
